--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -10,7 +10,7 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "compiler": "swc",
+        "compiler": "babel",
         "outputPath": "dist/apps/frontend",
         "index": "apps/frontend/public/index.html",
         "baseHref": "/",
