--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@babel/plugin-transform-for-of": "^7.24.1",
+    "@babel/preset-env": "^7.24.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@golevelup/ts-jest": "^0.5.0",
-    "@nestjs/common": "^10.0.3",
-    "@nestjs/core": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.3",
     "@swc/helpers": "~0.5.0",
     "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^6.4.4",
@@ -16,16 +18,17 @@
     "@types/express": "^4.17.17",
     "@types/jsrsasign": "^10.5.9",
     "@types/multer": "^1.4.7",
+    "@types/three": "^0.164.0",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
+    "babel-plugin-loop-optimizer": "^1.4.1",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "babel-preset-react": "^6.24.1",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
-    "express": "^4.18.2",
     "formik": "^2.2.9",
-    "fs": "^0.0.1-security",
-    "jose": "^5.2.4",
-    "js-sha256": "^0.11.0",
-    "json-server": "^1.0.0-alpha.23",
+    "inversify": "^6.0.2",
     "pretty-quick": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -36,7 +39,9 @@
     "react-to-print": "^2.14.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.0",
+    "styled-components": "^6.1.9",
     "swc-loader": "^0.2.3",
+    "three.js": "^0.77.1",
     "tslib": "^2.3.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.0",
@@ -44,14 +49,11 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.3",
+    "@babel/preset-react": "^7.24.1",
     "@nx/eslint-plugin": "16.3.2",
     "@nx/jest": "16.3.2",
     "@nx/js": "16.3.2",
     "@nx/linter": "16.3.2",
-    "@nx/nest": "^16.3.2",
     "@nx/node": "16.3.2",
     "@nx/react": "16.3.2",
     "@nx/webpack": "16.3.2",
@@ -84,13 +86,13 @@
     "jest-environment-node": "^29.4.1",
     "jest-watch-typeahead": "^2.2.2",
     "nx": "16.3.2",
-    "prettier": "^2.6.2",
+    "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typescript": "~5.0.2",
+    "typescript": "^5.4.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.77.0"
   },
