--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,22 +1,21 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "dist/out-tsc",
-    "rootDir": ".",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
-    "lib": ["es2020", "dom"],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "mapRoot": "/",
+    "sourceRoot": "/",
+    "outDir": "build",
     "alwaysStrict": true,
-    "baseUrl": ".",
+    "downlevelIteration": true,
+    "baseUrl": "./",
     "paths": {
       "@frontend/*": ["apps/frontend/src/*"],
       "@shared/*": ["libs/shared/src/*"]
