--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
     "formik": "^2.2.9",
-    "inversify": "^6.0.2",
     "pretty-quick": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -43,6 +42,7 @@
     "swc-loader": "^0.2.3",
     "three.js": "^0.77.1",
     "tslib": "^2.3.0",
+    "typescript-ioc": "^3.2.2",
     "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.0",
     "web-vitals": "^3.3.2",
